Compositor: Scenes are being set to no users after doing a full copy. #97709

Closed
opened 2022-04-29 17:26:08 +02:00 by michael campbell · 15 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-13 23:49, hash: 0ba061c3bc
Worked: (newest version of Blender that worked as expected)

Short Description
In compositor, if there is no render layers node or removing scene from render layers node and making full copy of scene will result zero users for the original scene
Extremely problematic as I just lost several hours of work after saving and reopening a file.

steps to reproduce

  • open blender
  • go to the compositor tab and click use nodes (node network will be created)
  • Remove scene from Render layers node
  • make a full copy:
{F13038215}

Your original scene will now show 0 users and will be lost on resave.

{F13038219}

Doesn't matter if there's geometry, cameras etc, it'll still show 0 users.

When doing the full copy, the new copy has 2 users, and the original now has 0 users:
image.png

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-13 23:49, hash: `0ba061c3bc` Worked: (newest version of Blender that worked as expected) **Short Description** In compositor, if there is no render layers node or removing scene from render layers node and making full copy of scene will result zero users for the original scene Extremely problematic as I just lost several hours of work after saving and reopening a file. **steps to reproduce** - open blender - go to the compositor tab and click use nodes (node network will be created) - Remove scene from Render layers node - make a full copy: ``` {F13038215} ``` # Your original scene will now show 0 users and will be lost on resave. ``` {F13038219} ``` Doesn't matter if there's geometry, cameras etc, it'll still show 0 users. When doing the full copy, the new copy has 2 users, and the original now has 0 users: ![image.png](https://archive.blender.org/developer/F13038228/image.png)

Added subscriber: @3di

Added subscriber: @3di

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Thanks for the report, but I can't reproduce the problem, Scene always has at least 1 User here.
Are you sure the steps describing the problem are complete?

Thanks for the report, but I can't reproduce the problem, Scene always has at least 1 User here. Are you sure the steps describing the problem are complete?

Hi Germano. Perhaps it's related to the file originally being created in an earlier version of Blender. I've attached a cut down version of the file. open the 'comp master' scene and then choose the full copy option. A zero should appear next to the original 'comp master' indicating it has no users and will be deleted on file open.

scene issue.blend

Hi Germano. Perhaps it's related to the file originally being created in an earlier version of Blender. I've attached a cut down version of the file. open the 'comp master' scene and then choose the full copy option. A zero should appear next to the original 'comp master' indicating it has no users and will be deleted on file open. [scene issue.blend](https://archive.blender.org/developer/F13039001/scene_issue.blend)

here's what mine looks like after choosing the full copy option:
image.png

full copy option:
image.png

here's what mine looks like after choosing the full copy option: ![image.png](https://archive.blender.org/developer/F13039005/image.png) full copy option: ![image.png](https://archive.blender.org/developer/F13039009/image.png)

and if the original is marked as fake user, then the copy gets a fake user, but the original loses it's fake user and shows 0 users instead. Below I did a full copy of 'Comp cam 2':

image.png

and if the original is marked as fake user, then the copy gets a fake user, but the original loses it's fake user and shows 0 users instead. Below I did a full copy of 'Comp cam 2': ![image.png](https://archive.blender.org/developer/F13039028/image.png)

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this from scratch when no scene is selected in render layers node.
@mano-wii , does this also fall under #core module?

I can reproduce this from scratch when no scene is selected in render layers node. @mano-wii , does this also fall under #core module?
Pratik Borhade changed title from Scenes are being set to no users after doing a full copy of another scene. Results in loss of work when re-opening blend files. to Compositor: Scenes are being set to no users after doing a full copy of another scene 2022-04-30 13:51:01 +02:00
michael campbell changed title from Compositor: Scenes are being set to no users after doing a full copy of another scene to Compositor: Scenes are being set to no users after doing a full copy. 2022-04-30 13:58:15 +02:00
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Yep, this should be #core also.

@mont29: hm, it has always been like that but this does not look like a nice thing to do. this way you'll loose the compositing nodetree on save and load...
note if you do this without step (4.), the scene we be reinforced into the renderlayers node upon save and reload.

Yep, this should be #core also. @mont29: hm, it has always been like that but this does not look like a nice thing to do. this way you'll loose the compositing nodetree on save and load... note if you do this without step (4.), the scene we be reinforced into the renderlayers node upon save and reload.

This issue was referenced by 60772baebf

This issue was referenced by 60772baebf6cf4bb54bc7d04a758c78d639062cf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-05-04 17:30:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97709
No description provided.