Fix T97709: Compositor: Scenes are being set to no users after doing a full copy.

Similar issue/solution as in rB5188c14718c5 from this Monday actually,
there may be more of those still lurking around... Quite surprising they
all get reported now, this behavior has been in Blender since years.